Category alignment issues and new stylesheet for messages.

--- a/administrator/components/com_k2/css/settings.css
+++ b/administrator/components/com_k2/css/settings.css
@@ -50,7 +50,9 @@
 			transition:all 350ms cubic-bezier(0.730, -0.005, 0.445, 1.000);
 		}
 		.jw--settings fieldset label:hover { cursor: pointer; box-shadow: 0 1px 1px rgba(65,64,66,.14), inset 0 0 10px rgba(0,0,0,.15); }
-		.jw--settings fieldset label:first-of-type { border-radius: 3px 0 0 3px; }
+		.jw--settings .right label:first-of-type { border-radius: 3px 0 0 3px; },
+		.jw--settings fieldset label:first-of-type
+		.jw--settings .right label:last-child,
 		.jw--settings fieldset label:last-child { border-radius: 0 3px 3px 0; }
 		.jw--setting--single input[type="radio"] { position: absolute; clip: rect(0,0,0,0); }
 		
@@ -58,6 +60,9 @@
 		.jw--setting--single input[value=""]:checked + label { background: #63696f; color: #fff; box-shadow: 0 1px 1px rgba(65,64,66,.14); }
 		.jw--setting--single input[value="0"]:checked + label { background: #bd362f; color: #fff; box-shadow: 0 1px 1px rgba(65,64,66,.14); }
 		.jw--setting--single input[value="1"]:checked + label { background: #3fa800; color: #fff; box-shadow: 0 1px 1px rgba(65,64,66,.14); }
+		
+		/* select 2 styling */
+		.jw--setting--single .select2-container { border-radius: 3px; border: 1px solid #dbdcdc; height: 34px; line-height: 34px; position: static; }
 		
 	/* Form definitions */
 	.jw--generic--def { font-size: 13px; }
@@ -120,8 +125,3 @@
 			.jw--information #k2AboutBlock h2 { margin: 30px 0; }
 			.jw--information #k2AboutBlock a { padding-bottom: 2px; border-bottom: 1px solid #dbdcdc; }
 	
-
-
-
-
-
